--- a/themes/theme/layout/_partial/sidebar/sidebar-archive.ejs
+++ b/themes/theme/layout/_partial/sidebar/sidebar-archive.ejs
@@ -1,5 +1,5 @@
   <div class="sidebar-archive">
-    <!-- 在ejs中将archive按照时间排序 -->
+    <!-- Archive is sorted by time -->
     <% var resortAllPosts = site.posts.map(function (item) { %>
     <% let title = item.title; %>
     <% let link = url_for(item.path) ; %>
