--- a/themes/theme/layout/about.ejs
+++ b/themes/theme/layout/about.ejs
@@ -1,4 +1,4 @@
-<!-- 不可以删除，否则会调用post的layout  -->
+<!-- Cannot be deleted, otherwise layout will be called -->
 <main class="main about-page">
     <article class="article-entry">
         <%- page.content %>
