--- a/themes/theme/layout/_partial/base-head.ejs
+++ b/themes/theme/layout/_partial/base-head.ejs
@@ -8,26 +8,26 @@
         <%= theme.SEO_title %>
         <% } %>
     </title>
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="<%- theme.favicon %>apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%- theme.favicon %>apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%- theme.favicon %>apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%- theme.favicon %>apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%- theme.favicon %>apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%- theme.favicon %>apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%- theme.favicon %>apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%- theme.favicon %>apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%- theme.favicon %>apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="<%- theme.favicon %>android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%- theme.favicon %>favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="<%- theme.favicon %>favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%- theme.favicon %>favicon-16x16.png">
+    <link rel="manifest" href="<%- theme.favicon %>manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="<%- theme.favicon %>ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <!-- TODO: 在font-face加载完毕后改变字体  -->
+    <!-- TODO: Change the font after the font-face is loaded  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
-    <!-- 提前加载place holder  -->
+    <!-- Load placeholder in advance  -->
     <style type="text/css">
         @font-face {
             font-family: 'Oswald-Regular';
@@ -60,19 +60,7 @@
     <script src="//cdn.staticfile.org/jquery/3.2.1/jquery.min.js" defer></script>
     <% let jsURL = url_for('/scripts/main.js'); %>
     <script src="<%- jsURL %>" defer></script>
-    <!-- 百度统计  -->
-    <% if(theme.baidu_analytics) { %>
-    <script>
-        var _hmt = _hmt || [];
-        (function () {
-        var hm = document.createElement("script");
-        hm.src = "<%- theme.baidu_analytics %>";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
-    <% } %>
-    <!-- 谷歌统计  -->
+    <!-- Google Analytics  -->
     <% if (theme.google_analytics) { %>
     <script>
         (function (i, s, o, g, r, a, m) {
