--- a/themes/theme/layout/_partial/base-header.ejs
+++ b/themes/theme/layout/_partial/base-header.ejs
@@ -4,7 +4,7 @@
 <header class="header">
 <% } %>
     <div class="header-sidebar-menu">&#xe775;</div>
-    <!-- post页的toggle banner  -->
+    <!-- Toggle banner for the post page  -->
     <% if (is_post()) { %>
     <div class="banner">
             <div class="blog-title">
