--- a/themes/theme/layout/_partial/base-share.ejs
+++ b/themes/theme/layout/_partial/base-share.ejs
@@ -2,9 +2,6 @@
 <% postURL = url_for(page.path) %>
 <div class="post-share iconfont-archer">
     <ul class="share-box" data-href = "<%- postURL %>" data-title = "<%= page.title %>" >
-        <li class="to-weibo">分享到微博</li>
-        <li class="to-wechat">分享到微信</li>
-        <li class="to-qq">分享到QQ</li>
-        <li class="to-twitter">分享到twitter</li>
+        <li class="to-twitter">Share to Twitter</li>
     </ul>
 </div>
