--- a/themes/theme/layout/_partial/sidebar/sidebar-tags.ejs
+++ b/themes/theme/layout/_partial/sidebar/sidebar-tags.ejs
@@ -5,11 +5,11 @@
     <% }) %>
     </div>
     <div class="tag-load-fail" style="display: none; color: #ccc; font-size: 0.6rem;">
-    缺失模块。<br/>
-    1、请确保node版本大于6.2<br/>
-    2、在博客根目录（注意不是archer根目录）执行以下命令：<br/>
+    Missing module.<br/>
+    1. Make sure node version is greater than 6.2.<br/>
+    2. In the Hexo root directory execute the following：<br/>
     <span style="color: #f75357; font-size: 1rem; line-height: 2rem;">npm i hexo-generator-json-content --save</span><br/>
-    3、在根目录_config.yml里添加配置：
+    3. In the root directory _config.yml add the configuration：
     <pre style="color: #888; font-size: 0.6rem;">
 jsonContent:
   meta: false
